--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ desktop.ini
 
 # Dossiers de build et distributions
 /build/
+/.Building/
 /dist/
 /out/
 /release/
@@ -80,6 +81,10 @@ coverage/
 .nyc_output/
 .coverage
 htmlcov/
+
+# Claude Code
+.claude/
+CLAUDE.md
 
 # Autres
 .vercel
